--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,14 @@
     background-color: darkred;
  }
 
- header {
-   text-align: center;
+ .btn{
+   display:flex;
+   justify-content: space-between;
+ }
+
+ header h1 {
    font-size: 10rem;
-   justify-content: center;
+   text-align: center;
    color: darkgoldenrod;
    text-decoration: underline;
  }
@@ -24,14 +28,20 @@
   width:20rem;
   font-size: 2rem;
  }
-
+ #results-btn{
+  font-size: 2rem;
+  color: darkgoldenrod;
+  border:none;
+  background-color: darkred;
+  text-decoration: underline;
+  justify-content: flex-end;
+ }
+ #results-btn:hover{
+    color: white;
+ }
  #quiz-btn:hover{
     background-color: darkorange;
     color:white;
- }
-
- #quiz-btn::after{
-    display:hidden;
  }
 
  .container {
@@ -40,13 +50,15 @@
   padding: 1rem;
  }
 
- #results-btn{
-  font-size: 2rem;
-  color: darkgoldenrod;
-  border:none;
-  background-color: darkred;
-  text-decoration: underline;
+ #choices{
+   list-style-type: none;
+   line-height:4rem;
+   font-size: 2rem;
+   font-weight: bold;
  }
- #results-btn:hover{
-    color: white;
+ #choices li:hover{
+   color: white;
+   background-color: darkorange;
+   pointer-events: grab;
  }
+
