--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,15 @@
    text-align: center;
    color: darkgoldenrod;
    text-decoration: underline;
+   margin-top:1rem;
+   margin-bottom:2rem;
+ }
+
+ h1{
+  margin-right:1rem;
+  margin-left:1rem;
+  margin-top:0;
+  margin-bottom:0;
  }
 
  nav p {
@@ -28,6 +37,7 @@
     text-align: center;
     color: darkgoldenrod;
     font-size: 2rem;
+    margin:.5rem;
  }
 
  #quiz-btn {
@@ -66,7 +76,7 @@
 
  #choices{
    list-style-type: none;
-   line-height:4rem;
+   line-height:3rem;
    font-size: 2rem;
    font-weight: bold;
  }
@@ -81,6 +91,8 @@
    flex-direction:column;
    align-items: center;
    justify-content: center;
+   margin-right:3rem;
+   margin-left:3rem;
  }
 
  #endscreen {
